<resources>
    <string name="app_name">amarotest</string>
    <string name="generic_error">Ocorreu um erro.</string>
    <string name="try_again">Tentar Novamente</string>
    <string name="error_image_content_description">Error Image</string>
    <string name="bottom_navigation_menu_home_title">Home</string>
    <string name="bottom_navigation_menu_about_title">About App</string>
    <string name="content_description_product_image">Product Image</string>
    <string name="product_price_text">Apenas %1$s</string>
    <string name="product_promotion_price_text">Por apenas %1$s</string>
    <string name="content_description_product_image_">Product Image</string>
    <string name="pp_size">PP</string>
    <string name="p_size">P</string>
    <string name="m_size">M</string>
    <string name="g_size">G</string>
    <string name="gg_size">GG</string>
    <string name="about_image_content_description">About Image</string>
</resources>
