<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <include
            android:id="@+id/errorView"
            layout="@layout/error_view"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_description_product_image_"
            android:transitionName="product_image_transition"
            tools:src="@drawable/ic_shopping_cart"/>

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Product Price"/>

        <TextView
            android:id="@+id/productHasPromotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Has Promotion"/>

        <TextView
            android:id="@+id/productPromotionPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Product Promotion Price"/>

        <TextView
            android:id="@+id/productAvailableSizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Product Available sizes"/>

        <!--Size Layouts-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/ppSize"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pp_size"
                    android:textColor="@color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/pSize"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/p_size"
                    android:textColor="@color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mSize"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/m_size"
                    android:textColor="@color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/gSize"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/g_size"
                    android:textColor="@color/white"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/ggSize"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/spacing_small"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="20dp"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gg_size"
                    android:textColor="@color/white"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_medium"
        android:src="@drawable/ic_shopping_cart"/>
</android.support.v7.widget.CardView>
